crates/ars-core/tests/ui/has_id_wrong_type.rs
use ars_core::HasId;

#[derive(HasId)]
struct Props {
    pub id: u64,
}

fn main() {}
